@@ -2,6 +2,10 @@ autopkgtest (3.18.1) UNRELEASED; urgency=medium
 
   * With --apt-pocket=POCKET=pkgname,... also include <release>-updates.
   * cloud-vm-setup, adt-setup-vm: Disable /etc/cron.daily/apt.
+  * Detect if apt fails to download packages (as opposed to installing them),
+    retry up to three times, and eventually fail with exit code 16. This
+    avoids failing tests due to DNS/infrastructure problems and handling them
+    as tmpfails instead.
 
  -- Martin Pitt <mpitt@debian.org>  Wed, 11 Nov 2015 22:56:46 +0100
 
